deepview-rt-sys/deepview-rt.h

#define NN_IMAGE_PROC_UNSIGNED_NORM 0x0001
#define NN_IMAGE_PROC_WHITENING 0x0002
#define NN_IMAGE_PROC_SIGNED_NORM 0x0004
typedef enum {
    NN_SUCCESS = 0,
    NN_ERROR_INTERNAL,
    NN_ERROR_INVALID_HANDLE,
    NN_ERROR_OUT_OF_MEMORY,
    NN_ERROR_OUT_OF_RESOURCES,
    NN_ERROR_NOT_IMPLEMENTED,
    NN_ERROR_INVALID_PARAMETER,
    NN_ERROR_TYPE_MISMATCH,
    NN_ERROR_SHAPE_MISMATCH,
    NN_ERROR_INVALID_SHAPE,
    NN_ERROR_INVALID_ORDER,
    NN_ERROR_INVALID_AXIS,
    NN_ERROR_MISSING_RESOURCE,
    NN_ERROR_INVALID_ENGINE,
    NN_ERROR_TENSOR_NO_DATA,
    NN_ERROR_KERNEL_MISSING,
    NN_ERROR_TENSOR_TYPE_UNSUPPORTED,
    NN_ERROR_TOO_MANY_INPUTS,
    NN_ERROR_SYSTEM_ERROR,
    NN_ERROR_INVALID_LAYER,
    NN_ERROR_MODEL_INVALID,
    NN_ERROR_MODEL_MISSING,
    NN_ERROR_STRING_TOO_LARGE,
    NN_ERROR_INVALID_QUANT,
    NN_ERROR_MODEL_GRAPH_FAILED,
    NN_ERROR_GRAPH_VERIFY_FAILED,
} NNError;
typedef enum {
    NNTensorType_RAW = 0,
    NNTensorType_STR = 1,
    NNTensorType_I8 = 2,
    NNTensorType_U8 = 3,
    NNTensorType_I16 = 4,
    NNTensorType_U16 = 5,
    NNTensorType_I32 = 6,
    NNTensorType_U32 = 7,
    NNTensorType_I64 = 8,
    NNTensorType_U64 = 9,
    NNTensorType_F16 = 10,
    NNTensorType_F32 = 11,
    NNTensorType_F64 = 12
} NNTensorType;
typedef struct nn_tensor NNTensor;
typedef void NNModel;
typedef void NNModelParameter;
typedef struct nn_context NNContext;
typedef void(nn_aux_object_free)(NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_load_image(NNTensor* tensor, const void* image, size_t image_size);
NN_AVAILABLE_SINCE_2_1
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_tensor_load_image_ex(NNTensor*   tensor,
                        const void* image,
                        size_t      image_size,
                        uint32_t    proc);
NN_AVAILABLE_SINCE_2_0
NN_API
int
nn_model_validate(const NNModel* memory, size_t size);
NN_AVAILABLE_SINCE_2_0
NN_API
const char*
nn_model_validate_error(int err);
NN_AVAILABLE_SINCE_2_0
NN_API
const char*
nn_model_name(const NNModel* model);
NN_AVAILABLE_SINCE_2_0
NN_API
const char*
nn_model_uuid(const NNModel* model);
NN_AVAILABLE_SINCE_2_0
NN_API
uint32_t
nn_model_serial(const NNModel* model);
NN_AVAILABLE_SINCE_2_0
NN_API
int
nn_model_label_count(const NNModel* model);
NN_AVAILABLE_SINCE_2_0
NN_API
const char*
nn_model_label(const NNModel* model, int index);
NN_AVAILABLE_SINCE_2_0
NN_API
const uint8_t*
nn_model_label_icon(const NNModel* model, int index, size_t* size);
NN_AVAILABLE_SINCE_2_4
NN_API
const uint32_t*
nn_model_inputs(const NNModel* model, size_t* n_inputs);
NN_AVAILABLE_SINCE_2_4
NN_API
const uint32_t*
nn_model_outputs(const NNModel* model, size_t* n_outputs);
NN_AVAILABLE_SINCE_2_0
NN_API
size_t
nn_model_layer_count(const NNModel* model);
NN_AVAILABLE_SINCE_2_0
NN_API
const char*
nn_model_layer_name(const NNModel* model, size_t index);
NN_AVAILABLE_SINCE_2_0
NN_API
int
nn_model_layer_lookup(const NNModel* model, const char* name);
NN_AVAILABLE_SINCE_2_0
NN_API
const char*
nn_model_layer_type(const NNModel* model, size_t index);
NN_AVAILABLE_SINCE_2_4
NN_API
int16_t
nn_model_layer_type_id(const NNModel* model, size_t index);
NN_AVAILABLE_SINCE_2_0
NN_API
const char*
nn_model_layer_datatype(const NNModel* model, size_t index);
NN_AVAILABLE_SINCE_2_0
NN_API
NNTensorType
nn_model_layer_datatype_id(const NNModel* model, size_t index);
NN_AVAILABLE_SINCE_2_4
NN_API
const int32_t*
nn_model_layer_zeros(const NNModel* model, size_t index, size_t* n_zeros);
NN_AVAILABLE_SINCE_2_4
NN_API
const float*
nn_model_layer_scales(const NNModel* model, size_t index, size_t* n_scales);
NN_AVAILABLE_SINCE_2_4
NN_API
int
nn_model_layer_axis(const NNModel* model, size_t index);
NN_AVAILABLE_SINCE_2_0
NN_API
const int32_t*
nn_model_layer_shape(const NNModel* model, size_t index, size_t* n_dims);
NN_AVAILABLE_SINCE_2_0
NN_API
size_t
nn_model_layer_inputs(const NNModel*   model,
                      size_t           index,
                      const uint32_t** inputs);
NN_AVAILABLE_SINCE_2_4
NN_API
const NNModelParameter*
nn_model_layer_parameter(const NNModel* model, size_t layer, const char* key);
NN_AVAILABLE_SINCE_2_4
NN_API
const int32_t*
nn_model_layer_parameter_shape(const NNModel* model,
                               size_t         layer,
                               const char*    key,
                               size_t*        n_dims);
NN_AVAILABLE_SINCE_2_4
NN_API
const float*
nn_model_layer_parameter_data_f32(const NNModel* model,
                                  size_t         layer,
                                  const char*    key,
                                  size_t*        length);
NN_AVAILABLE_SINCE_2_4
NN_API
const int16_t*
nn_model_layer_parameter_data_i16(const NNModel* model,
                                  size_t         layer,
                                  const char*    key,
                                  size_t*        length);
NN_AVAILABLE_SINCE_2_4
NN_API
const uint8_t*
nn_model_layer_parameter_data_raw(const NNModel* model,
                                  size_t         layer,
                                  const char*    key,
                                  size_t*        length);
NN_AVAILABLE_SINCE_2_4
NN_API
const char*
nn_model_layer_parameter_data_str(const NNModel* model,
                                  size_t         layer,
                                  const char*    key,
                                  size_t         index);
NN_AVAILABLE_SINCE_2_4
NN_API
size_t
nn_model_layer_parameter_data_str_len(const NNModel* model,
                                      size_t         layer,
                                      const char*    key);
NN_AVAILABLE_SINCE_2_0
NN_API
size_t
nn_model_memory_size(const NNModel* model);
NN_AVAILABLE_SINCE_2_0
NN_API
size_t
nn_model_cache_minimum_size(const NNModel* model);
NN_AVAILABLE_SINCE_2_4
NN_API
const int32_t*
nn_model_parameter_shape(const NNModelParameter* parameter, size_t* n_dims);
NN_AVAILABLE_SINCE_2_4
NN_API
const float*
nn_model_parameter_data_f32(const NNModelParameter* parameter, size_t* length);
NN_AVAILABLE_SINCE_2_4
NN_API
const int16_t*
nn_model_parameter_data_i16(const NNModelParameter* parameter, size_t* length);
NN_AVAILABLE_SINCE_2_4
NN_API
const uint8_t*
nn_model_parameter_data_raw(const NNModelParameter* parameter, size_t* length);
NN_AVAILABLE_SINCE_2_4
NN_API
const char*
nn_model_parameter_data_str(const NNModelParameter* parameter, size_t index);
NN_AVAILABLE_SINCE_2_4
NN_API
size_t
nn_model_parameter_data_str_len(const NNModelParameter* parameter);
typedef NNError(nn_user_ops)(NNContext*  context,
                             const char* opname,
                             size_t      index);