deepviewrt-sys/src/ffi.rs

extern "C" {
    #[doc = " Loads an image from the provided buffer and decodes it accordingly, the\n function uses the images headers to find an appropriate decoder.  The\n function will handle any required casting to the target tensor's format and\n will apply image standardization (compatible with tensorflow's\n tf.image.per_image_standardization) if the proc parameter is set to\n NN_IMAGE_PROC_WHITENING.\n\n When called with proc==0 it is the same as nn_tensor_load_image().\n\n NN_IMAGE_PROC_UNSIGNED_NORM\n NN_IMAGE_PROC_WHITENING_NORM\n NN_IMAGE_PROC_SIGNED_NORM\n\n @public @memberof NNTensor\n @since 2.1"]
    pub fn nn_tensor_load_image_ex(
        tensor: *mut NNTensor,
        image: *const ::std::os::raw::c_void,
        image_size: usize,
        proc_: u32,
    ) -> NNError;
}
extern "C" {
    #[doc = " Attempts to validate model, this is automatically called by nn_model_load and\n nn_model_mmap.  The function returns 0 on success, otherwise it will return\n an error code which can be turned into a string by calling\n @ref nn_model_validate_error() with the return value from\n @ref nn_model_validate().\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_validate(memory: *const NNModel, size: usize) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the string associated with a given error returned from\n @ref nn_model_validate().\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_validate_error(err: ::std::os::raw::c_int) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns the name of the given model object.  Names are optional and if the\n model does not contain a name then NULL will be returned.\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_name(model: *const NNModel) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Currently returns NULL (UPDATE WHEN FUNCTION IS UPDATED)\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_uuid(model: *const NNModel) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Currently returns 0\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_serial(model: *const NNModel) -> u32;
}
extern "C" {
    #[doc = " Returns the number of labels within a given model object.\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_label_count(model: *const NNModel) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the label of the given index within the given model object.  If the\n model contains no labels or the index is out of range then NULL will be\n returned.\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_label(
        model: *const NNModel,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns an optional icon resource for the provided label index.\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_label_icon(
        model: *const NNModel,
        index: ::std::os::raw::c_int,
        size: *mut usize,
    ) -> *const u8;
}
extern "C" {
    #[doc = " Returns the list of model input indices and optionally the number of inputs.\n\n If the field is missing from the model NULL is returned.\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_inputs(model: *const NNModel, n_inputs: *mut usize) -> *const u32;
}
extern "C" {
    #[doc = " Returns the list of model output indices and optionally the number of\n outputs.\n\n If the field is missing from the model 0 is returned.\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_outputs(model: *const NNModel, n_outputs: *mut usize) -> *const u32;
}
extern "C" {
    #[doc = " Returns the number of layers within a given model object.\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_layer_count(model: *const NNModel) -> usize;
}
extern "C" {
    #[doc = " Returns the name of a layer at a given index within the given model object.\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_layer_name(
        model: *const NNModel,
        index: usize,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns the index of a given layer with the name provided in the given model\n object.\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_layer_lookup(
        model: *const NNModel,
        name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the type of a layer at the given index within the given model object.\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_layer_type(
        model: *const NNModel,
        index: usize,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns the type ID of the layer.\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_layer_type_id(model: *const NNModel, index: usize) -> i16;
}
extern "C" {
    #[doc = " Returns the datatype of a layer at the given index within the given model\n object.\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_layer_datatype(
        model: *const NNModel,
        index: usize,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns the datatype of a layer at the given index within the given model\n object.\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_layer_datatype_id(model: *const NNModel, index: usize) -> NNTensorType;
}
extern "C" {
    #[doc = " Returns the array of quantization zero-points, and optionally the number of\n zero-points in the array.  The length will either be 0, 1, or equal to the\n number of channels in an NHWC/NCHW tensor.\n\n The channel axis can be queried using @ref nn_model_layer_axis().\n\n If no quantization parameters are available then n_zeros will be 0.\n If the tensor is quantized using full tensor quantization n_zeros will be 1.\n If the tensor is quantized using per-channel quantization n_zeros will be C\n which will equal the channel dimension of the tensor.  For an NHWC tensor it\n would equal shape[3].\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_layer_zeros(
        model: *const NNModel,
        index: usize,
        n_zeros: *mut usize,
    ) -> *const i32;
}
extern "C" {
    #[doc = " Returns the array of quantization scales, and optionally the number of scales\n in the array.  The length will either be 0, 1, or equal to the number of\n channels in an NHWC/NCHW tensor.\n\n The channel axis can be queried using @ref nn_model_layer_axis().\n\n If no quantization parameters are available then n_scales will be 0.\n If the tensor is quantized using full tensor quantization n_scales will be 1.\n If the tensor is quantized using per-channel quantization n_scales will be C\n which will equal the channel dimension of the tensor.  For an NHWC tensor it\n would equal shape[3].\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_layer_scales(
        model: *const NNModel,
        index: usize,
        n_scales: *mut usize,
    ) -> *const f32;
}
extern "C" {
    #[doc = " Returns the natural data axis for the tensor or -1 if one is not set.\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_layer_axis(model: *const NNModel, index: usize) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the shape of a layer at the given index within the given model\n object.\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_layer_shape(
        model: *const NNModel,
        index: usize,
        n_dims: *mut usize,
    ) -> *const i32;
}
extern "C" {
    #[doc = " Returns the number of inputs to a layer at the given index within the given\n model object.\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_layer_inputs(
        model: *const NNModel,
        index: usize,
        inputs: *mut *const u32,
    ) -> usize;
}
extern "C" {
    #[doc = " Returns an NNModelParameter from the model at the layer index defined by\n layer using the parameter key.  If the layer does not contain this parameter\n NULL is returned.\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_layer_parameter(
        model: *const NNModel,
        layer: usize,
        key: *const ::std::os::raw::c_char,
    ) -> *const NNModelParameter;
}
extern "C" {
    #[doc = " Returns the shape of the model parameter for layer at index <layer>.\n\n @ref nn_model_parameter_shape()\n\n Returns NULL if either the parameter is not found or the shape is missing.\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_layer_parameter_shape(
        model: *const NNModel,
        layer: usize,
        key: *const ::std::os::raw::c_char,
        n_dims: *mut usize,
    ) -> *const i32;
}
extern "C" {
    #[doc = " Returns float data for parameter <key> at layer index <layer>.  This is a\n convenience wrapper around acquiring the parameter followed by acquiring the\n data.\n\n @ref nn_model_parameter_data_f32()\n\n Returns NULL if either the parameter is not found or the data is missing.\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_layer_parameter_data_f32(
        model: *const NNModel,
        layer: usize,
        key: *const ::std::os::raw::c_char,
        length: *mut usize,
    ) -> *const f32;
}
extern "C" {
    #[doc = " Returns int16 data for parameter <key> at layer index <layer>.  This is a\n convenience wrapper around acquiring the parameter followed by acquiring the\n data.\n\n @ref nn_model_parameter_data_i16()\n\n Returns NULL if either the parameter is not found or the data is missing.\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_layer_parameter_data_i16(
        model: *const NNModel,
        layer: usize,
        key: *const ::std::os::raw::c_char,
        length: *mut usize,
    ) -> *const i16;
}
extern "C" {
    #[doc = " Returns raw data for parameter <key> at layer index <layer>.  This is a\n convenience wrapper around acquiring the parameter followed by acquiring the\n data.\n\n @ref nn_model_parameter_data_raw()\n\n Returns NULL if either the parameter is not found or the data is missing.\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_layer_parameter_data_raw(
        model: *const NNModel,
        layer: usize,
        key: *const ::std::os::raw::c_char,
        length: *mut usize,
    ) -> *const u8;
}
extern "C" {
    #[doc = " Returns string data for parameter <key> at layer index <layer> for string\n array element <index>.  This is a convenience wrapper around acquiring the\n parameter followed by acquiring the data.\n\n @ref nn_model_parameter_data_str()\n\n Returns NULL if either the parameter is not found or the data is missing.\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_layer_parameter_data_str(
        model: *const NNModel,
        layer: usize,
        key: *const ::std::os::raw::c_char,
        index: usize,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns number of string elements in the data_str array for the specified\n layer and parameter key.  This is a convenience wrapper around acquiring the\n parameter followed by acquiring the data.\n\n @ref nn_model_parameter_data_str_len()\n\n Returns number of string elements in the array.\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_layer_parameter_data_str_len(
        model: *const NNModel,
        layer: usize,
        key: *const ::std::os::raw::c_char,
    ) -> usize;
}
extern "C" {
    #[doc = " Returns the memory size of the given model object.\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_memory_size(model: *const NNModel) -> usize;
}
extern "C" {
    #[doc = " Returns the minimum cache size of a given model object.\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_cache_minimum_size(model: *const NNModel) -> usize;
}
